--- a/src/app/core/layout/pages/profile/editprofile/editprofile.component.html
+++ b/src/app/core/layout/pages/profile/editprofile/editprofile.component.html
@@ -12,12 +12,12 @@
             <h3 class="mb-2 text-2xl font-bold tracking-tight text-gray-900">Profile</h3>
           </div>
 
-          <div class="h-64 w-64 relative flex items-center justify-center rounded-full">
-            <div class="flex flex-col items-center justify-center pt-5 pb-6">
-              <img class="rounded-full h-full w-full mt-3" src="{{user.imageName}}" alt="profile">
+          <div class="h-64 w-64 bg-black relative flex items-center justify-center rounded-full">
+            <div class="flex flex-col h-64 w-64 items-center justify-center">
+              <img class="h-64 w-64 rounded-full object-cover" src="{{user.imageName}}" alt="profile">
             </div>
             <div >
-              <label for="dropzone-file" class="absolute left-0 top-1 h-full w-full z-1 flex flex-col col-2 items-center justify-center rounded-full cursor-pointer bg-transparent hover:bg-gray-200 hover:bg-opacity-50">
+              <label for="dropzone-file" class="absolute left-0 top-0 h-full w-full z-1 flex flex-col col-2 items-center justify-center rounded-full cursor-pointer bg-transparent hover:bg-gray-200 hover:bg-opacity-50">
                 <!-- Tooltip -->
                 <h2 class="absolute bottom-17 left-1/2 transform -translate-x-1/2 px-3 py-2 text-gray-900 bg-white rounded-lg shadow-md hover:bg-gray-50 dark:hover:bg-gray-700 opacity-0 hover:opacity-100 transition-opacity text-nowrap">
                   Import Image
