--- a/src/app/core/layout/pages/dashboard/dashboard.component.html
+++ b/src/app/core/layout/pages/dashboard/dashboard.component.html
@@ -3,7 +3,12 @@
 
     <main class="grid grid-cols-2 p-4 md:mx-[35px] h-auto pt-20">
         <div class="h-96 mb-4">
+          <div
+          class="flex justify-center w-full max-w-md p-4 bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700 mt-16">
+          <span class="bg-green-100 text-green-800 text-xs font-medium me-2 px-2.5 py-0.5 rounded dark:bg-gray-700 dark:text-green-400 border border-green-400">Workspace invite code:</span>
+          <span class="bg-gray-100 text-gray-800 text-xs font-medium me-2 px-2.5 py-0.5 rounded dark:bg-gray-700 dark:text-gray-300">{{code}}</span>
 
+          </div>
             <div
                 class="w-full max-w-md p-4 bg-white border border-gray-200 rounded-lg shadow sm:p-8 dark:bg-gray-800 dark:border-gray-700 mt-16">
                 <div class="flex items-center justify-between mb-4">
@@ -14,7 +19,7 @@
                         <li *ngFor="let userworkspace of userworkspaces" class="py-3 sm:py-4">
                             <div class="flex items-center">
                                 <div class="flex-shrink-0">
-                                    <img class="w-8 h-8 rounded-full" src="../../assets/img/hacker.png" alt="Neil image">
+                                    <img class="w-8 h-8 rounded-full" src="{{userworkspace['image_name']}}" alt="Neil image">
                                 </div>
                                 <div class="flex-1 min-w-0 ms-4">
                                     <p class="text-sm font-medium text-gray-900 truncate dark:text-white">
