--- a/src/app/core/layout/pages/templatelist/templatelist.component.html
+++ b/src/app/core/layout/pages/templatelist/templatelist.component.html
@@ -1,47 +1,38 @@
-<div class="w-full flex items-center justify-center overflow-x-hidden">
-  <div class="container relative mx-auto mt-1 grid grid-cols-1 md:grid-cols-2 items-center justify-center gap-4 overflow-hidden p-4">
-    <div class="relative mb-4 mt-auto h-[600px] w-full md:w-[100%] ml-72 rounded-lg border border-black bg-white p-6 shadow-lg">
-      <div class="absolute bottom-4 right-4">
-        <button (click)="pickTemplate(contentId)" class=" bg-black px-4 py-2 font-bold text-white hover:bg-blue-700">Create</button>
+<div class="w-full overflow-x-hidden">
+  <div class="container relative mx-auto mt-10 grid items-center justify-center gap-4 overflow-hidden p-4 md:grid-cols-1 sm:grid-cols-1 sm:w-[60%]">
+    <div class="ml-8 relative mt-auto h-[650px] w-full rounded-lg border border-gray-200 p-6 shadow-md md:w-[90%] sm:w-[80%]">
+
+      <div class="absolute bottom-8 right-8 sm:ml-16 grid grid-flow-col gap-4">
+        <button (click)="pickTemplate(contentId)" class="w-[fit-content] focus:ring-blue-primary-700 rounded-md bg-black px-5 py-2 text-sm font-bold text-white transition duration-300 ease-in-out hover:bg-blue-600 focus:outline-none focus:ring-2 focus:ring-opacity-50 sm:px-3 sm:text-sm md:ml-40 ">Create</button>
+        <button (click)="navigateToReportList()" class="w-[fit-content] focus:ring-blue-primary-700 rounded-md bg-black px-5 py-2 text-sm font-bold text-white transition duration-300 ease-in-out hover:bg-blue-600 focus:outline-none focus:ring-2 focus:ring-opacity-50 sm:px-3 sm:text-sm">Cancel</button>
       </div>
-      <!-- Rectangle Container -->
-      <div class="mx-auto mt-4 grid h-[535px] w-full md:w-[70%] grid-cols-1 sm:grid-cols-2 md:grid-cols-2 lg:grid-cols-2 xl:grid-cols-2 gap-4 overflow-y-auto overflow-x-hidden rounded-lg border border-black bg-gray-200 p-4">
+
+      <div class="my-10 mx-10  grid h-[550px] w-[80%]  gap-4 overflow-y-auto overflow-x-hidden rounded-lg border border-gray-300  p-4 sm:grid-cols-1 sm:w-[60%]  md:w-[50%] grid-cols-1  lg:grid-cols-2 ">
+    
+        <div class="absolute top-2 left-1/2 transform -translate-x-1/2 mt-1.5 text-center">
+          <p class="flex items-center justify-start p-2 text-base font-medium text-gray-900 rounded-lg shadow-md hover:bg-gray-100 dark:hover:bg-gray-300 group gap-2 text-nowrap">Select a Template</p>
+        </div>
+
         <!-- First Column -->
-        <div class="m-2 h-full w-full">
-          <div class="rounded-container mb-3 h-60 w-full overflow-y-auto overflow-x-hidden rounded-lg border border-black bg-white p-6 shadow-lg">
-            <!-- Example content -->
-          </div>
-          <div class="rounded-container h-60 w-full overflow-y-auto overflow-x-hidden rounded-lg border border-black bg-white p-6 shadow-lg">
-            <!-- Example content -->
+        <div class="m-2 h-full w-full cursor-pointer hover:bg-slate-300" (click)="selectTemplate(templates[0])">
+          <div class="mb-2 mt-3 h-60 w-full overflow-y-auto overflow-x-hidden rounded-lg border border-gray-300 p-6 shadow-md">
+            <img [src]="" alt="Template Image">
           </div>
         </div>
+
+        <div class="m-2 h-full w-full cursor-pointer hover:bg-slate-300" (click)="selectTemplate(templates[0])">
+          <div class="mb-2 mt-3 h-60 w-full overflow-y-auto overflow-x-hidden rounded-lg border border-gray-300 p-6 shadow-md">
+            <img [src]="templates[0].image" alt="Template Image">
+          </div>
+        </div>
+
         <!-- Second Column -->
-        <div class="m-2 h-full w-full">
-          <div class="rounded-container mb-3 h-60 w-full overflow-y-auto overflow-x-hidden rounded-lg border border-black bg-white p-6 shadow-lg">
-            <!-- Example content -->
-          </div>
-          <div class="rounded-container h-60 w-full overflow-y-auto overflow-x-hidden rounded-lg border border-black bg-white p-6 shadow-lg">
-            <!-- Example content -->
+        <div class="m-2 h-full w-full cursor-pointer hover:bg-slate-300" (click)="selectTemplate(templates[1]) ">
+          <div class="mb-3 mt-3 h-60 w-full overflow-y-auto overflow-x-hidden rounded-lg border border-gray-300 p-6 shadow-md">
+            <img [src]="templates[1].image" alt="Template Image">
           </div>
         </div>
-        <!-- Third Column -->
-        <div class="m-2 h-full w-full">
-          <div class="rounded-container mb-3 h-60 w-full overflow-y-auto overflow-x-hidden rounded-lg border border-black bg-white p-6 shadow-lg">
-            <!-- Example content -->
-          </div>
-          <div class="rounded-container h-60 w-full overflow-y-auto overflow-x-hidden rounded-lg border border-black bg-white p-6 shadow-lg">
-            <!-- Example content -->
-          </div>
-        </div>
-        <!-- Fourth Column -->
-        <div class="m-2 h-full w-full">
-          <div class="rounded-container mb-3 h-60 w-full overflow-y-auto overflow-x-hidden rounded-lg border border-black bg-white p-6 shadow-lg">
-            <!-- Example content -->
-          </div>
-          <div class="rounded-container h-60 w-full overflow-y-auto overflow-x-hidden rounded-lg border border-black bg-white p-6 shadow-lg">
-            <!-- Example content -->
-          </div>
-        </div>
+        
       </div>
     </div>
   </div>
