--- a/src/app/core/layout/pages/templatelist/templatelist.component.html
+++ b/src/app/core/layout/pages/templatelist/templatelist.component.html
@@ -13,25 +13,45 @@
           <p class="flex items-center justify-start p-2 text-base font-medium text-gray-900 rounded-lg shadow-md hover:bg-gray-100 dark:hover:bg-gray-300 group gap-2 text-nowrap">Select a Template</p>
         </div>
 
-        <!-- First Column -->
-        <div class="m-2 h-full w-full cursor-pointer hover:bg-slate-300" (click)="selectTemplate(templates[0])">
-          <div class="mb-2 mt-3 h-60 w-full overflow-y-auto overflow-x-hidden rounded-lg border border-gray-300 p-6 shadow-md">
-            <img [src]="templates[0].image" alt="Template Image">
-          </div>
-        </div>
+<!-- Blank Template -->
+<label class="m-2 h-full w-full cursor-pointer hover:bg-slate-300" (click)="selectTemplate(templates[0])">
+  <div class="mb-2 mt-3 h-60 w-full overflow-y-auto overflow-x-hidden rounded-lg border border-gray-300 p-6 shadow-md">
+    <div class="text-center mb-2 flex-row">
+      <p class="text-gray-600 text-sm font-medium">Blank Template</p>
+      <input type="radio" name="template" [checked]="selectedTemplate === 0">
+    </div>
+    <label class="flex justify-center items-center">
+      <img [src]="templates[0].image" alt="Template Image">
+    </label>
+  </div>
+</label>
 
-        <div class="m-2 h-full w-full cursor-pointer hover:bg-slate-300" (click)="selectTemplate(templates[1])">
-          <div class="mb-2 mt-3 h-60 w-full overflow-y-auto overflow-x-hidden rounded-lg border border-gray-300 p-6 shadow-md">
-            <img [src]="templates[1].image" alt="Template Image">
-          </div>
-        </div>
+<!-- Accomplishment Report -->
+<label class="m-2 h-full w-full cursor-pointer hover:bg-slate-300" (click)="selectTemplate(templates[1])">
+  <div class="mb-2 mt-3 h-60 w-full overflow-y-auto overflow-x-hidden rounded-lg border border-gray-300 p-6 shadow-md">
+    <div class="text-center mb-2 flex-row">
+      <p class="text-gray-600 text-sm font-medium">Accomplishment Report</p>
+      <input type="radio" name="template" [checked]="selectedTemplate === 1">
+    </div>
+    <label class="flex justify-center items-center">
+      <img [src]="templates[1].image" alt="Template Image">
+    </label>
+  </div>
+</label>
 
-        <!-- Second Column -->
-        <div class="m-2 h-full w-full cursor-pointer hover:bg-slate-300" (click)="selectTemplate(templates[2]) ">
-          <div class="mb-3 mt-3 h-60 w-full overflow-y-auto overflow-x-hidden rounded-lg border border-gray-300 p-6 shadow-md">
-            <img [src]="templates[2].image" alt="Template Image">
-          </div>
-        </div>
+
+     <!-- Faculty Matrix -->
+<label class="m-2 h-full w-full cursor-pointer hover:bg-slate-300" (click)="selectTemplate(templates[2])">
+  <div class="mb-3 mt-3 h-60 w-full overflow-y-auto overflow-x-hidden rounded-lg border border-gray-300 p-6 shadow-md">
+    <div class="text-center mb-2 flex-row">
+      <p class="text-gray-600 text-sm font-medium">Faculty Matrix</p>
+      <input type="radio" name="template" [checked]="selectedTemplate === 2">
+    </div>
+    <label class="flex justify-center items-center">
+      <img [src]="templates[2].image" alt="Template Image">
+    </label>
+  </div>
+</label>
         
       </div>
     </div>
