--- a/src/app/core/layout/pages/templatelist/templatelist.component.html
+++ b/src/app/core/layout/pages/templatelist/templatelist.component.html
@@ -16,8 +16,8 @@
         </div>
 
 <!-- Blank Template -->
-<label class="m-2 h-full w-full cursor-pointer hover:bg-slate-300" (click)="selectTemplate(templates[0])">
-  <div class="mb-2 mt-3 h-60 w-full overflow-y-auto overflow-x-hidden rounded-lg border border-gray-300 p-6 shadow-md">
+<label class="m-2 h-full w-full cursor-pointer transition ease-in-out delay-150  hover:-translate-y-5 hover:scale-130  duration-300 hover:shadow-sm " (click)="selectTemplate(templates[0])">
+  <div class="mb-2 mt-3 h-60 w-full hover:bg-slate-100 overflow-y-auto overflow-x-hidden rounded-lg border border-gray-300 p-6 shadow-md">
     <div class="text-center mb-2 -mt-5 flex-row">
       <input type="radio" name="template" [checked]="selectedTemplate === 1">
     </div>
@@ -31,8 +31,8 @@
 </label>
 
 <!-- Accomplishment Report -->
-<label class="m-2 h-full w-full cursor-pointer hover:bg-slate-300" (click)="selectTemplate(templates[1])">
-  <div class="mb-2 mt-3 h-60 w-full overflow-y-auto overflow-x-hidden rounded-lg border border-gray-300 p-6 shadow-md">
+<label class="m-2 h-full w-full cursor-pointer transition ease-in-out delay-150  hover:-translate-y-5 hover:scale-130  duration-300 hover:shadow-sm " (click)="selectTemplate(templates[1])">
+  <div class="mb-2 mt-3 h-60 w-full hover:bg-slate-100 overflow-y-auto overflow-x-hidden rounded-lg border border-gray-300 p-6 shadow-md">
     <div class="text-center mb-2 -mt-5 flex-row">
       <input type="radio" name="template" [checked]="selectedTemplate === 0">
     </div>
@@ -47,8 +47,8 @@
 
 
      <!-- Faculty Matrix -->
-<label class="m-2 h-full w-full cursor-pointer hover:bg-slate-300" (click)="selectTemplate(templates[2])">
-  <div class="mb-3 mt-3 h-60 w-full overflow-y-auto overflow-x-hidden rounded-lg border border-gray-300 p-6 shadow-md">
+<label class="m-2 h-full w-full cursor-pointer transition ease-in-out delay-150  hover:-translate-y-5 hover:scale-130  duration-300 hover:shadow-sm " (click)="selectTemplate(templates[2])">
+  <div class="mb-3 mt-3 h-60 w-full hover:bg-slate-100 overflow-y-auto overflow-x-hidden rounded-lg border border-gray-300 p-6 shadow-md">
     <div class="text-center mb-2 -mt-5 flex-row">
       <input type="radio" name="template" [checked]="selectedTemplate === 1">
     </div>
@@ -61,8 +61,8 @@
   </div>
 </label>
       <!-- Teaching and Learning-->
-<label class="m-2 h-full w-full cursor-pointer hover:bg-slate-300" (click)="selectTemplate(templates[3])">
-  <div class="mb-3 mt-3 h-60 w-full overflow-y-auto overflow-x-hidden rounded-lg border border-gray-300 p-6 shadow-md">
+<label class="m-2 h-full w-full cursor-pointer transition ease-in-out delay-150  hover:-translate-y-5 hover:scale-130  duration-300  hover:shadow-sm " (click)="selectTemplate(templates[3])">
+  <div class="mb-3 mt-3 h-60 w-full hover:bg-slate-100 overflow-y-auto overflow-x-hidden rounded-lg border border-gray-300 p-6 shadow-md">
     <div class="text-center mb-2 -mt-5 flex-row">
       <input type="radio" name="template" [checked]="selectedTemplate === 2">
     </div>
@@ -75,8 +75,8 @@
   </div>
 </label>
       <!-- Faculty schedule-->
-<label class="m-2 h-full w-full cursor-pointer hover:bg-slate-300" (click)="selectTemplate(templates[4])">
-  <div class="mb-3 mt-3 h-60 w-full overflow-y-auto overflow-x-hidden rounded-lg border border-gray-300 p-6 shadow-md">
+<label class="m-2 h-full w-full cursor-pointer transition ease-in-out delay-150  hover:-translate-y-5 hover:scale-130  duration-300  hover:shadow-sm " (click)="selectTemplate(templates[4])">
+  <div class="mb-3 mt-3 h-60 w-full hover:bg-slate-100 overflow-y-auto overflow-x-hidden rounded-lg border border-gray-300 p-6 shadow-md">
     <div class="text-center mb-2 -mt-5 flex-row">
       <input type="radio" name="template" [checked]="selectedTemplate === 3">
     </div>
@@ -90,8 +90,8 @@
 </label>
 
 <!-- Event report -->
-<label class="m-2 h-full w-full cursor-pointer hover:bg-slate-300" (click)="selectTemplate(templates[5])">
-  <div class="mb-3 mt-3 h-60 w-full overflow-y-auto overflow-x-hidden rounded-lg border border-gray-300 p-6 shadow-md">
+<label class="m-2 h-full w-full cursor-pointer transition ease-in-out delay-150  hover:-translate-y-5 hover:scale-130  duration-300 hover:shadow-sm " (click)="selectTemplate(templates[5])">
+  <div class="mb-3 mt-3 h-60 w-full overflow-y-auto hover:bg-slate-100 overflow-x-hidden rounded-lg border border-gray-300 p-6 shadow-md">
     <div class="text-center mb-2 -mt-5 flex-row">
       <input type="radio" name="template" [checked]="selectedTemplate === 5">
     </div>
@@ -104,8 +104,8 @@
   </div>
 </label>
 <!-- Financial report -->
-<label class="m-2 h-full w-full cursor-pointer hover:bg-slate-300" (click)="selectTemplate(templates[6])">
-  <div class="mb-3 mt-3 h-60 w-full overflow-y-auto overflow-x-hidden rounded-lg border border-gray-300 p-6 shadow-md">
+<label class="m-2 h-full w-full cursor-pointer transition ease-in-out delay-150  hover:-translate-y-5 hover:scale-130  duration-300 hover:shadow-sm " (click)="selectTemplate(templates[6])">
+  <div class="mb-3 mt-3 h-60 w-full overflow-y-auto hover:bg-slate-100 overflow-x-hidden rounded-lg border border-gray-300 p-6 shadow-md">
     <div class="text-center mb-2 -mt-5 flex-row">
       <input type="radio" name="template" [checked]="selectedTemplate === 5">
     </div>
@@ -118,8 +118,8 @@
   </div>
 </label>
 <!-- summary of accomplishment report -->
-<label class="m-2 h-full w-full cursor-pointer hover:bg-slate-300" (click)="selectTemplate(templates[7])">
-  <div class="mb-3 mt-3 h-60 w-full overflow-y-auto overflow-x-hidden rounded-lg border border-gray-300 p-6 shadow-md">
+<label class="m-2 h-full w-full cursor-pointer transition ease-in-out delay-150  hover:-translate-y-5 hover:scale-130  duration-300 hover:shadow-sm " (click)="selectTemplate(templates[7])">
+  <div class="mb-3 mt-3 h-60 w-full overflow-y-auto  hover:bg-slate-100 overflow-x-hidden rounded-lg border border-gray-300 p-6 shadow-md">
     <div class="text-center mb-2 -mt-5 flex-row">
       <input type="radio" name="template" [checked]="selectedTemplate === 6">
     </div>
@@ -132,8 +132,8 @@
   </div>
 </label>
 <!-- Syllabus -->
-<label class="m-2 h-full w-full cursor-pointer hover:bg-slate-300" (click)="selectTemplate(templates[8])">
-  <div class="mb-3 mt-3 h-60 w-full overflow-y-auto overflow-x-hidden rounded-lg border border-gray-300 p-6 shadow-md">
+<label class="m-2 h-full w-full cursor-pointer transition ease-in-out delay-150  hover:-translate-y-5 hover:scale-130  duration-300 hover:shadow-sm " (click)="selectTemplate(templates[8])">
+  <div class="mb-3 mt-3 h-60 w-full overflow-y-auto hover:bg-slate-100 overflow-x-hidden rounded-lg border border-gray-300 p-6 shadow-md">
     <div class="text-center mb-2 -mt-5 flex-row">
       <input type="radio" name="template" [checked]="selectedTemplate === 7">
     </div>
