--- a/src/app/core/layout/pages/annualreport/annualreportlist/annualreportlist.component.html
+++ b/src/app/core/layout/pages/annualreport/annualreportlist/annualreportlist.component.html
@@ -35,20 +35,23 @@
                                     </div>
                                 </div>
                             </div>
-                            <div
-                                class="w-full md:w-auto flex flex-col md:flex-row space-y-2 md:space-y-0 items-stretch md:items-center justify-end md:space-x-3 flex-shrink-0">
-
-                                <button (click)="navigateToCreateAnnualReport()"
-                                    class="flex items-center justify-center text-white bg-black hover:bg-primary-700 font-medium rounded-lg text-sm px-5 py-2 dark:bg-primary-600 dark:hover:bg-primary-700 gap-2">
+                            <div class="w-full md:w-auto flex flex-col md:flex-row space-y-2 md:space-y-0 items-stretch md:items-center justify-end md:space-x-3 flex-shrink-0">
+                                <button (click)="navigateToCreateAnnualReport()" class="flex items-center justify-center text-white bg-black hover:bg-primary-700 font-medium rounded-lg text-sm px-5 py-2 dark:bg-primary-600 dark:hover:bg-primary-700 gap-2">
                                     Create Annual Report
                                 </button>
-
+                                <button *ngIf="isAnyReportSelected()" (click)="navigateTodeleteSelectedReports()" class="flex items-center justify-center text-white bg-black hover:bg-red-800 font-medium rounded-lg text-sm px-5 py-2 gap-2">
+                                    Delete Selected reports
+                                </button>
                             </div>
                         </div>
                         <div class="overflow-x-auto">
                             <table class="w-full text-sm text-left text-gray-50">
                                 <thead class="text-xs text-gray-700 uppercase bg-gray-50">
                                     <tr class="text-center">
+                                        <th scope="col" class="p-4 whitespace-nowrap">
+                                            <input type="checkbox" (change)="toggleSelectAll($event)">
+                                            <label class="ml-2">Select All</label>
+                                        </th>
                                         <th scope="col" class="p-4 whitespace-nowrap">Annual Report Name</th>
                                         <th scope="col" class="p-2 whitespace-nowrap">Date Created</th>
                                         <th scope="col" class="p-2 whitespace-nowrap">Date Edited</th>
@@ -57,6 +60,9 @@
                                 </thead>
                                 <tbody>
                                     <tr *ngFor="let annualReport of annualReport" class="border-b  hover:bg-gray-100 ">
+                                        <td class="p-4 text-center">
+                                            <input type="checkbox" [(ngModel)]="annualReport.selected">
+                                        </td>
                                         <th scope="row"
                                             class="py-2 lg:pl-12 px-6  font-medium text-gray-900 whitespace-nowrap ">
                                             <div class="flex items-center justify-start">
