--- a/src/app/shared/ai/ai.component.html
+++ b/src/app/shared/ai/ai.component.html
@@ -1,5 +1,5 @@
 <button (click)="toggleChat()" *ngIf="!isOpen"
-    class="z-50 fixed bottom-4 right-4 h-12 w-12 bg-blue-500 text-white rounded-full flex items-center justify-center overflow-hidden">
+    class="z-50 fixed bottom-4 right-4 h-12 w-12 bg-blue-500 cursor-pointer transition ease-in-out delay-150  hover:-translate-y-4 hover:scale-125  duration-300 hover:shadow-sm text-white rounded-full flex items-center justify-center overflow-hidden">
     <img src="assets/img/Robotmascot.png" alt="Chat Icon" class="h-full w-full object-cover">
 </button>
 
