--- a/src/app/core/layout/pages/content/content.component.html
+++ b/src/app/core/layout/pages/content/content.component.html
@@ -1,7 +1,8 @@
 <div class="overflow-hidden h-full">
     <div class="flex justify-between">
       <button (click)="navigateToReportList()" type="button" class="py-2.5 px-5 m-2 mt-4 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-100 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700">Back</button>
-      
+      <!-- <button (click)="printContent()" type="button" class="py-2.5 px-5 m-2 mt-4 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-100 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700">Back</button>
+       -->
     </div>
     <div *ngIf="successMessage" class="toast success-popup">
       <div class="toast-content-wrapper">
